@@ -71,7 +71,7 @@ public class TypeScriptFile {
 
     public void writeAsModule(BufferedWriter writer) throws IOException {
         String modulePath = "packages/" + classPath.getTypeScriptPath();
-        writer.write("declare module %s {\n".formatted(ProbeJS.GSON.toJson(modulePath)));
+        writer.write(String.format("declare module %s {\n",ProbeJS.GSON.toJson(modulePath)));
         this.write(writer);
         writer.write("}\n");
     }
