@@ -4,6 +4,7 @@ import moe.wolfgirl.probejs.lang.java.clazz.ClassPath;
 import moe.wolfgirl.probejs.lang.typescript.Declaration;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class TSArrayType extends BaseType {
@@ -20,6 +21,6 @@ public class TSArrayType extends BaseType {
 
     @Override
     public List<String> format(Declaration declaration, FormatType input) {
-        return List.of("(%s)[]".formatted(component.line(declaration, input)));
+        return Collections.singletonList(String.format("(%s)[]",component.line(declaration, input)));
     }
 }
